[java] removed use of guava from browser packages